--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "echarts": "^4.4.0",
     "element-ui": "^2.12.0",
     "moment": "^2.24.0",
     "v-charts": "^1.19.0",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
